Edición responsive header, footer, detail-artist y playlist

--- a/playlist.html
+++ b/playlist.html
@@ -29,34 +29,11 @@
             </form>
         </div>
     </header>
-
     <!--PlaylistGrid-->
-    <container>
+    <container class="container-table">
         <span>
             <h1 class="h1playlist"><strong>Tu Playlist</strong></h1>
         </span>
-        <style>
-            tr{
-                text-align: left;
-            }
-            th{
-                border-bottom: 1px solid rgb(77, 6, 77);
-            }
-            .num{
-                width: 5%;
-                text-align: center;
-            }
-            .play{
-                width: 10%;
-                text-align: center;
-            }
-            .play a{
-                color: #F8F1F1;
-            }
-            .play a i:hover{
-                color: black;
-            }
-        </style>
         <table style="width: 90%;" class="table">
             <tr>
                 <th class="num">
@@ -68,13 +45,13 @@
                 <th>
                     ALBUM
                 </th>
-                <th>
+                <th class="play">
                     PLAY
                 </th>
             </tr>
             <tr>
                 <td class="num">
-                    (1)
+                    1
                 </td>
                 <td>
                     (título canción1)
@@ -88,7 +65,7 @@
             </tr>
             <tr>
                 <td class="num">
-                    (2)
+                    2
                 </td>
                 <td>
                     (título canción2)
@@ -102,7 +79,119 @@
             </tr>
             <tr>
                 <td class="num">
-                    (3)
+                    3
+                </td>
+                <td>
+                    (título canción3)
+                </td>
+                <td>
+                    (album canción3)
+                </td>
+                <td class="play">
+                    <a href=""><i class="far fa-play-circle"></i></a>
+                </td>
+            </tr>
+            <tr>
+                <td class="num">
+                    4
+                </td>
+                <td>
+                    (título canción3)
+                </td>
+                <td>
+                    (album canción3)
+                </td>
+                <td class="play">
+                    <a href=""><i class="far fa-play-circle"></i></a>
+                </td>
+            </tr>
+            <tr>
+                <td class="num">
+                    4
+                </td>
+                <td>
+                    (título canción3)
+                </td>
+                <td>
+                    (album canción3)
+                </td>
+                <td class="play">
+                    <a href=""><i class="far fa-play-circle"></i></a>
+                </td>
+            </tr>
+            <tr>
+                <td class="num">
+                    5
+                </td>
+                <td>
+                    (título canción3)
+                </td>
+                <td>
+                    (album canción3)
+                </td>
+                <td class="play">
+                    <a href=""><i class="far fa-play-circle"></i></a>
+                </td>
+            </tr>
+            <tr>
+                <td class="num">
+                    6
+                </td>
+                <td>
+                    (título canción3)
+                </td>
+                <td>
+                    (album canción3)
+                </td>
+                <td class="play">
+                    <a href=""><i class="far fa-play-circle"></i></a>
+                </td>
+            </tr>
+            <tr>
+                <td class="num">
+                    7
+                </td>
+                <td>
+                    (título canción3)
+                </td>
+                <td>
+                    (album canción3)
+                </td>
+                <td class="play">
+                    <a href=""><i class="far fa-play-circle"></i></a>
+                </td>
+            </tr>
+            <tr>
+                <td class="num">
+                    8
+                </td>
+                <td>
+                    (título canción3)
+                </td>
+                <td>
+                    (album canción3)
+                </td>
+                <td class="play">
+                    <a href=""><i class="far fa-play-circle"></i></a>
+                </td>
+            </tr>
+            <tr>
+                <td class="num">
+                    9
+                </td>
+                <td>
+                    (título canción3)
+                </td>
+                <td>
+                    (album canción3)
+                </td>
+                <td class="play">
+                    <a href=""><i class="far fa-play-circle"></i></a>
+                </td>
+            </tr>
+            <tr>
+                <td class="num">
+                    10
                 </td>
                 <td>
                     (título canción3)
