--- a/detail-artist.html
+++ b/detail-artist.html
@@ -8,14 +8,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Poppins:wght@300&display=swap"
-        rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Roboto:wght@500&display=swap"
-        rel="stylesheet">
-
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Poppins:wght@300&display=swap"rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Roboto:wght@500&display=swap"rel="stylesheet">
+    <title>Detalle de Artistas</title>
 </head>
-
 <body>
     <!-- header -->
     <header>
@@ -106,5 +102,4 @@
         </section>
     </footer>
 </body>
-
 </html>
