--- a/playlist.html
+++ b/playlist.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"> 
-    <title>Document</title>
+    <title>PLaylist</title>
 </head>
 <body>
     <!-- header -->
