--- a/detail-track.html
+++ b/detail-track.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">   
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"> 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"> 
-    <title>Detalle de Canciones</title>
-</head>
-<body>   
-    <!-- header -->
-    <header>
-        <div class="logo" >
+    
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="./css/style.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+        <title>Detalle de Canciones</title>
+    </head>
+    
+    <body>
+        <!-- header -->
+        <header>
+        <div class="logo">
             <a href="./index.html"><img src="./img/logos-turnedup.png" alt="logo"></a>
         </div>
         <div id="centroheader">
@@ -26,8 +28,8 @@
                 </ul>
             </nav>
             <form action="./search-results.html" class="barrabusqueda">
-                    <input type="text" name="search" value="" placeholder="Canciones, artistas, albums...">
-                    <button type="submit">Buscar</button>
+                <input type="text" name="search" value="" placeholder="Canciones, artistas, albums...">
+                <button type="submit">Buscar</button>
             </form>
         </div>
     </header>
@@ -42,7 +44,8 @@
                 <a href="playlist.html" class="agregarplaylist">Agregar a PLaylist</a>
             </div>
             <div class="video">
-                <video src="./video/The Weeknd - Blinding Lights (Official Video).webm" controls="controls" preload="auto"></video>
+                <video src="./video/The Weeknd - Blinding Lights (Official Video).webm" controls="controls"
+                    preload="auto"></video>
             </div>
         </article>
     </container>
@@ -53,7 +56,7 @@
             <article class="contentcontact">
                 <ul>
                     <li>
-                        <a href="osonciniviola@udesa.edu.ar">Email</a> 
+                        <a href="osonciniviola@udesa.edu.ar">Email</a>
                         <i class="fas fa-envelope-square"></i>
                     </li>
                     <li>
@@ -86,4 +89,5 @@
         </section>
     </footer>
 </body>
+
 </html>
