Resultados de Búsqueda

--- a/search-results.html
+++ b/search-results.html
@@ -29,7 +29,30 @@
             </form>
         </div>
     </header>
-
+    <!--Container-Resultados de Busqueda*/-->
+    <container class="resultado-container">
+        <h1>Resultados de Búsqueda</h1>
+        <article class="article-resultado">
+            <h4>Resultado de Búsqueda</h4>
+        </article>
+        <article class="article-noresultados">
+            <h4>Error, no se han encontrado un resultado de búsqueda :(</h4>
+        </article>
+        <article class="recomendado">
+            <h4>Recomendados</h4>
+            <ul>
+                <li>
+                    <a href="./detail-artist.html">Artista: David Guetta</a>
+                </li>
+                <li>
+                    <a href="./detail-album.html">Album: Stories - Avicii</a>
+                </li>
+                <li>
+                    <a href="./detail-track.html">Canción: Blinding Lights - The Weekend</a>
+                </li>
+            </ul>
+        </article>
+    </container>
     <!--footer-->
     <footer>
         <section class="contact">
