--- a/playlist.html
+++ b/playlist.html
@@ -33,9 +33,9 @@
     </header>
     <!--PlaylistGrid-->
     <container class="container-table">
-        <span>
+        <div>
             <h1 class="h1playlist"><strong>Tu Playlist</strong></h1>
-        </span>
+        </div>
         <table style="width: 90%;" class="table">
             <tr>
                 <th class="num">
