--- a/search-results.html
+++ b/search-results.html
@@ -38,7 +38,7 @@
             <h4>Resultado de Búsqueda</h4>
         </article>
         <article class="article-noresultados">
-            <h4>Error, no se han encontrado un resultado de búsqueda :(</h4>
+            <h4>Lo sentimos, no se ha encontrado un resultado de búsqueda :(</h4>
         </article>
         <article class="recomendado">
             <h4>Recomendados</h4>
