Resultado busqueda y su responsive listos + bakground-color más oscuro en lás páginas

--- a/search-results.html
+++ b/search-results.html
@@ -35,24 +35,29 @@
     <container class="resultado-container">
         <h1>Resultados de Búsqueda</h1>
         <article class="article-resultado">
-            <h4>Resultado de Búsqueda</h4>
+            <h4>Resultado de Búsqueda:</h4>
         </article>
         <article class="article-noresultados">
-            <h4>Lo sentimos, no se ha encontrado un resultado de búsqueda :(</h4>
+            <h4>Lo sentimos, no se ha encontrado un resultado para tu búsqueda :(</h4>
         </article>
         <article class="recomendado">
             <h4>Recomendados</h4>
             <ul>
                 <li>
-                    <a href="./detail-artist.html">Artista: David Guetta</a>
+                    <a href="./detail-track.html">Canción: Blinding Lights - The Weekend</a>
                 </li>
                 <li>
                     <a href="./detail-album.html">Album: Stories - Avicii</a>
                 </li>
                 <li>
-                    <a href="./detail-track.html">Canción: Blinding Lights - The Weekend</a>
+                    <a href="./detail-artist.html">Artista: David Guetta</a>
                 </li>
             </ul>
+            <div class="img-reco">
+                <a href="./detail-track.html"><img src="./img/img_canciones/blinding_lights.jpg" alt="canciónblindinglights"></a>
+                <a href="./detail-album.html"><img src="./img/img_albums/avicii-stories_album.jpg" alt="slbumavicii"></a>
+                <a href="./detail-artist.html"><img src="./img/img_artistas/david_guetta.jpg" alt="fotodavidguetta"></a>
+            </div>
         </article>
     </container>
     <!--footer-->
