--- a/detail-track.html
+++ b/detail-track.html
@@ -44,8 +44,7 @@
                 <a href="playlist.html" class="agregarplaylist">Agregar a PLaylist</a>
             </div>
             <div class="video">
-                <video src="./video/The Weeknd - Blinding Lights (Official Video).webm" controls="controls"
-                    preload="auto"></video>
+                <video src="./video/The Weeknd - Blinding Lights (Official Video).webm" controls="controls" preload="auto"></video>
             </div>
         </article>
     </container>
