Archivos js y división trabajos}

--- a/detail-artist.html
+++ b/detail-artist.html
@@ -16,7 +16,7 @@
     <!-- header -->
     <header>
         <div class="logo" >
-            <a href="./index.html"><img src="./img/logos-turnedup.png" alt="logo"></a>
+            <a href="./home.html"><img src="./img/logos-turnedup.png" alt="logo"></a>
         </div>
         <div id="centroheader">
             <nav class="main-nav">
@@ -33,7 +33,7 @@
         </div>
     </header>
     
-    <!-- BODY -->
+    <!-- body -->
     <main class="da-main">
         <article class="da-article">
             <div class="da-contenedor-img">
