--- a/detail-album.html
+++ b/detail-album.html
@@ -10,12 +10,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <title>Detalles de Albums</title>
 </head>
-
 <body>
     <!-- header -->
     <header>
         <div class="logo">
-            <a href="./index.html"><img src="./img/logos-turnedup.png" alt="logo"></a>
+            <a href="./home.html"><img src="./img/logos-turnedup.png" alt="logo"></a>
         </div>
         <div id="centroheader">
             <nav class="main-nav">
@@ -103,5 +102,4 @@
             </section>
         </footer>
 </body>
-
 </html>
