--- a/detail-genres.html
+++ b/detail-genres.html
@@ -10,12 +10,11 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>Detalle de Géneros</title>
 </head>
-
 <body>
     <!-- header -->
     <header>
         <div class="logo">
-            <a href="./index.html"><img src="./img/logos-turnedup.png" alt="logo"></a>
+            <a href="./home.html"><img src="./img/logos-turnedup.png" alt="logo"></a>
         </div>
         <div id="centroheader">
             <nav class="main-nav">
@@ -84,5 +83,4 @@
         </section>
     </footer>
 </body>
-
 </html>
