--- a/detail-track.html
+++ b/detail-track.html
@@ -12,81 +12,79 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
         <title>Detalle de Canciones</title>
     </head>
-    
     <body>
         <!-- header -->
         <header>
-        <div class="logo">
-            <a href="./index.html"><img src="./img/logos-turnedup.png" alt="logo"></a>
-        </div>
-        <div id="centroheader">
-            <nav class="main-nav">
-                <ul>
-                    <li><a href="./index.html">Inicio</a></li>
-                    <li><a href="./genres.html">Géneros</a></li>
-                    <li><a href="./playlist.html">Playlist</a></li>
-                </ul>
-            </nav>
-            <form action="./search-results.html" class="barrabusqueda">
-                <input type="text" name="search" value="" placeholder="Canciones, artistas, albums...">
-                <button type="submit">Buscar</button>
-            </form>
-        </div>
-    </header>
-    <!--body-->
-    <container class="container-track">
-        <article class="article-track">
-            <div class="track-data">
-                <img src="./img/img_canciones/blinding_lights.jpg" alt="foto-tapadisco-blindingslights">
-                <h4><strong>Blinding Lights</strong></h4>
-                <h4><a href="./detail-artist.html">Artista: The Weekend</a></h4>
-                <h4><a href="./detail-album.html">Album: After Hours</a></h4>
-                <a href="playlist.html" class="agregarplaylist">Agregar a PLaylist</a>
+            <div class="logo">
+                <a href="./home.html"><img src="./img/logos-turnedup.png" alt="logo"></a>
             </div>
-            <div class="video">
-                <video src="./video/The Weeknd - Blinding Lights (Official Video).webm" controls="controls" preload="auto"></video>
+            <div id="centroheader">
+                <nav class="main-nav">
+                    <ul>
+                        <li><a href="./index.html">Inicio</a></li>
+                        <li><a href="./genres.html">Géneros</a></li>
+                        <li><a href="./playlist.html">Playlist</a></li>
+                    </ul>
+                </nav>
+                <form action="./search-results.html" class="barrabusqueda">
+                    <input type="text" name="search" value="" placeholder="Canciones, artistas, albums...">
+                    <button type="submit">Buscar</button>
+                </form>
             </div>
-        </article>
-    </container>
-    <!--footer-->
-    <footer>
-        <section class="contact">
-            <h4 class=""><strong>Contact</strong></h4>
-            <article class="contentcontact">
-                <ul>
-                    <li>
-                        <a href="osonciniviola@udesa.edu.ar">Email</a>
-                        <i class="fas fa-envelope-square"></i>
-                    </li>
-                    <li>
-                        <a href="2964-445566">Cellphone</a>
-                        <i class="fas fa-mobile-alt"></i>
-                    </li>
-                </ul>
+        </header>
+        <!--body-->
+        <container class="container-track">
+            <article class="article-track">
+                <div class="track-data">
+                    <img src="./img/img_canciones/blinding_lights.jpg" alt="foto-tapadisco-blindingslights">
+                    <h4><strong>Blinding Lights</strong></h4>
+                    <h4><a href="./detail-artist.html">Artista: The Weekend</a></h4>
+                    <h4><a href="./detail-album.html">Album: After Hours</a></h4>
+                    <a href="playlist.html" class="agregarplaylist">Agregar a PLaylist</a>
+                </div>
+                <div class="video">
+                    <video src="./video/The Weeknd - Blinding Lights (Official Video).webm" controls="controls" preload="auto"></video>
+                </div>
             </article>
-        </section>
-        <section class="terms">
-            <ul>
-                <li>
-                    <a href="">Privacy & Legal</a>
-                </li>
-                <li>
-                    <i class="fab fa-slack"></i>
-                </li>
-            </ul>
-        </section>
-        <section class="owners">
-            <h4>Owners</h4>
-            <p>
-                <i class="fas fa-users"></i>
-            </p>
-            <ul>
-                <li>Octavio Soncini</li>
-                <li>Julian Araujo</li>
-                <li>Nicolas Tufró</li>
-            </ul>
-        </section>
-    </footer>
+        </container>
+        <!--footer-->
+        <footer>
+            <section class="contact">
+                <h4 class=""><strong>Contact</strong></h4>
+                <article class="contentcontact">
+                    <ul>
+                        <li>
+                            <a href="osonciniviola@udesa.edu.ar">Email</a>
+                            <i class="fas fa-envelope-square"></i>
+                        </li>
+                        <li>
+                            <a href="2964-445566">Cellphone</a>
+                            <i class="fas fa-mobile-alt"></i>
+                        </li>
+                    </ul>
+                </article>
+            </section>
+            <section class="terms">
+                <ul>
+                    <li>
+                        <a href="">Privacy & Legal</a>
+                    </li>
+                    <li>
+                        <i class="fab fa-slack"></i>
+                    </li>
+                </ul>
+            </section>
+            <section class="owners">
+                <h4>Owners</h4>
+                <p>
+                    <i class="fas fa-users"></i>
+                </p>
+                <ul>
+                    <li>Octavio Soncini</li>
+                    <li>Julian Araujo</li>
+                    <li>Nicolas Tufró</li>
+                </ul>
+            </section>
+        </footer>
 </body>
-
 </html>
