--- a/detail-album.html
+++ b/detail-album.html
@@ -101,5 +101,6 @@
                 </ul>
             </section>
         </footer>
+        <script src="./js/detail-album.js"></script>
 </body>
 </html>
