--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
     <!-- header -->
     <header>
         <div class="logo" >
-            <a href="./index.html"><img src="./img/logos-turnedup.png" alt="logo"></a>
+            <a href="./home.html"><img src="./img/logos-turnedup.png" alt="logo"></a>
         </div>
         <div id="centroheader">
             <nav class="main-nav">
@@ -28,7 +28,7 @@
                     <li><a href="./playlist.html">Playlist</a></li>
                 </ul>
             </nav>
-            <form action="./search-results.html" class="barrabusqueda">
+            <form action="./search-results.html" class="barrabusqueda" method="GET">
                 <input type="text" name="search" value="" placeholder="Canciones, artistas, albums...">
                 <button type="submit">Buscar</button>
             </form>
@@ -253,5 +253,6 @@
             </ul>
         </section>
     </footer>
+    <script src="./js/home.js"></script>
 </body>
 </html>
