--- a/detail-track.html
+++ b/detail-track.html
@@ -86,5 +86,6 @@
                 </ul>
             </section>
         </footer>
+        <script src="./js/detail-track.js"></script>
 </body>
 </html>
