Avance detalle canción js

--- a/detail-artist.html
+++ b/detail-artist.html
@@ -16,7 +16,7 @@
     <!-- header -->
     <header>
         <div class="logo" >
-            <a href="./home.html"><img src="./img/logos-turnedup.png" alt="logo"></a>
+            <a href="./index.html"><img src="./img/logos-turnedup.png" alt="logo"></a>
         </div>
         <div id="centroheader">
             <nav class="main-nav">
