--- a/detail-track.html
+++ b/detail-track.html
@@ -16,7 +16,7 @@
         <!-- header -->
         <header>
             <div class="logo">
-                <a href="./home.html"><img src="./img/logos-turnedup.png" alt="logo"></a>
+                <a href="./index.html"><img src="./img/logos-turnedup.png" alt="logo"></a>
             </div>
             <div id="centroheader">
                 <nav class="main-nav">
@@ -36,7 +36,9 @@
         <container class="container-track">
             <article class="article-track">
                 <div class="track-data">
-                    <img src="./img/img_canciones/blinding_lights.jpg" alt="foto-tapadisco-blindingslights">
+                    <div class="image-track">
+                        <img class="image-track" image.src="" alt="foto-tapadisco-blindingslights">
+                    </div>
                     <h4><strong>Blinding Lights</strong></h4>
                     <h4><a href="./detail-artist.html">Artista: The Weekend</a></h4>
                     <h4><a href="./detail-album.html">Album: After Hours</a></h4>
