--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- header -->
     <header>
         <div class="logo" >
-            <a href="./home.html"><img src="./img/logos-turnedup.png" alt="logo"></a>
+            <a href="./index.html"><img src="./img/logos-turnedup.png" alt="logo"></a>
         </div>
         <div id="centroheader">
             <nav class="main-nav">
@@ -253,6 +253,6 @@
             </ul>
         </section>
     </footer>
-    <script src="./js/home.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
