Detail-track ya programada con js

--- a/detail-track.html
+++ b/detail-track.html
@@ -34,20 +34,7 @@
         </header>
         <!--body-->
         <container class="container-track">
-            <article class="article-track">
-                <div class="track-data">
-                    <div class="image-track">
-                        <img class="image-track" image.src="" alt="foto-tapadisco-blindingslights">
-                    </div>
-                    <h4><strong>Blinding Lights</strong></h4>
-                    <h4><a href="./detail-artist.html">Artista: The Weekend</a></h4>
-                    <h4><a href="./detail-album.html">Album: After Hours</a></h4>
-                    <a href="playlist.html" class="agregarplaylist">Agregar a PLaylist</a>
-                </div>
-                <div class="video">
-                    <video src="./video/The Weeknd - Blinding Lights (Official Video).webm" controls="controls" preload="auto"></video>
-                </div>
-            </article>
+            <article class="article-track"></article>
         </container>
         <!--footer-->
         <footer>
