Avance detalle canción y playlist

--- a/playlist.html
+++ b/playlist.html
@@ -55,7 +55,7 @@
                 <td class="num">
                     1
                 </td>
-                <td>
+                <td class="titulocancion">
                     (título canción1)
                 </td>
                 <td>
