boton agrgar-playlist

--- a/detail-track.html
+++ b/detail-track.html
@@ -34,7 +34,17 @@
         </header>
         <!--body-->
         <container class="container-track">
-            <article class="article-track"></article>
+            <article class="article-track">
+                `<div class="track-data">
+                    <div class="image-track"></div>
+                    <h4 class="cancion"></h4>
+                    <p class="duracion"></p>
+                    <h4 class="album"></h4>
+                    <h4 class="artista"></h4>
+                    <button class="agregarplaylist">Agregar a Playlist</button>
+                </div>
+                <div class="reproductor-track"></div>
+            </article>
         </container>
         <!--footer-->
         <footer>
