--- a/playlist.html
+++ b/playlist.html
@@ -205,6 +205,11 @@
                     <a href=""><i class="far fa-play-circle"></i></a>
                 </td>
             </tr>
+            <tr class="clean">
+                <td class="boton-clean">
+                    <button>Limpiar</button>
+                </td>
+            </tr>
         </table>
     </container>
 
