js_index_completo

--- a/respaldo-index.html
+++ b/respaldo-index.html
@@ -52,3 +52,116 @@
 
     </article>
 </a>
+
+
+
+<a href="./detail-album.html">
+    <article class="albums">
+        <div class="img-container">
+            <img class="index-img" src="./img/img_albums/el_ultimo_tour.jpg" alt="el_ultimo_tour">
+
+        </div>
+        <h5 class="titulo-elementos">El Último Tour del Mundo</h5>
+        <p class="texto-elementos">Bad Bunny</p>
+
+    </article>
+</a>
+<a href="./detail-album.html">
+    <article class="albums">
+        <div class="img-container">
+            <img class="index-img" src="./img/img_albums/trapicheo.jpg" alt="trapicheo">
+
+        </div>
+        <h5 class="titulo-elementos">Trapicheo (Mixtape)</h5>
+        <p class="texto-elementos">Khea</p>
+
+    </article>
+</a>
+<a href="./detail-album.html">
+    <article class="albums">
+        <div class="img-container">
+            <img class="index-img" src="./img/img_albums/avicii-stories_album.jpg" alt="stories">
+
+        </div>
+        <h5 class="titulo-elementos">Stories</h5>
+        <p class="texto-elementos">Avicii</p>
+
+    </article>
+</a>
+<a href="./detail-album.html">
+    <article class="albums">
+        <div class="img-container">
+            <img class="index-img" src="./img/img_albums/united.jpg" alt="united">
+
+        </div>
+        <h5 class="titulo-elementos">United We Are</h5>
+        <p class="texto-elementos">Hardwell</p>
+
+    </article>
+</a>
+<a href="./detail-album.html">
+    <article class="albums">
+        <div class="img-container">
+            <img class="index-img" src="./img/img_albums/forever.jpg" alt="forever">
+
+        </div>
+        <h5 class="titulo-elementos">Forever</h5>
+        <p class="texto-elementos">Alesso</p>
+
+    </article>
+</a>
+
+
+
+
+
+
+
+<a href="./detail-artist.html">
+    <article class="artistas">
+        <div class="img-container">
+            <img class="index-img" src="./img/img_artistas/david_guetta.jpg" alt="david_guetta">
+
+        </div>
+        <h5 class="titulo-elementos">David Guetta</h5>
+
+    </article>
+</a>
+<a href="./detail-artist.html">
+    <article class="artistas">
+        <div class="img-container">
+            <img class="index-img" src="./img/img_artistas/bzrp.jpg" alt="bzrp">
+
+        </div>
+        <h5 class="titulo-elementos">Bizarrap</h5>
+
+    </article>
+</a>
+<a href="./detail-artist.html">
+    <article class="artistas">
+        <div class="img-container">
+            <img class="index-img" src="./img/img_artistas/duki.jpg" alt="duki">
+
+        </div>
+        <h5 class="titulo-elementos">Duki</h5>
+
+    </article>
+</a>
+<a href="./detail-artist.html">
+    <article class="artistas">
+        <div class="img-container">
+            <img class="index-img" src="./img/img_artistas/maria.jpg" alt="becerra">
+        </div>
+        <h5 class="titulo-elementos">Maria Becerra</h5>
+
+    </article>
+</a>
+<a href="./detail-artist.html">
+    <article class="artistas">
+        <div class="img-container">
+            <img class="index-img" src="./img/img_artistas/drake.jpg" alt="drake">
+        </div>
+        <h5 class="titulo-elementos">Drake</h5>
+
+    </article>
+</a>
