JS genero y detalle de genero terminadas, cambios css y html

--- a/detail-album.html
+++ b/detail-album.html
@@ -34,7 +34,7 @@
     <!--body-->
     <container class="container-album">
         <section class="section-album">
-            <article><img src="./img/img_albums/avicii-stories_album.jpg" alt="foto-tapadisco-secrets"></article>
+            <article class='album-image'></article>
             <article class="album-data">
                 <h2>Album: Stories</h2>
                 <h3><a href="./detail-artist.html">Artista: Avicii</a></h2>
