--- a/detail-genres.html
+++ b/detail-genres.html
@@ -33,12 +33,10 @@
 
     <!--body-->
     <section class="detail-genres">
-        <h1>Dance/Electronica</h1>
+        <h1>Genero(consultar)</h1>
         <article class="detail-genres">
-            <ul class="detail-genres">
-                <li><a href="./detail-artist.html">Alesso</a> </li><img src="./img/img_artistas/alesso.jpg" alt="">
-                <li><a href="./detail-artist.html">Avicii</a> </li><img src="./img/img_artistas/avicii.jpeg" alt="">
-                <li><a href="./detail-artist.html">Hardwell</a> </li><img src="./img/img_artistas/hardwell.jpg" alt="">
+            <ul class="detailGenres">
+                
             </ul>
         </article>
     </section>
