--- a/genres.html
+++ b/genres.html
@@ -34,33 +34,17 @@
     <container class="genres">
         <article class="genres">
             <h1>Géneros</h1>
-            <ul class="genres">
-                <li><a href="./detail-genres.html">Dance/Electronica</a></li>
-                <li><a href="./detail-genres.html">Reggaeton</a> </li>
-                <li><a href="./detail-genres.html">Trap</a> </li>
-                <li><a href="./detail-genres.html">Rock</a> </li>
-                <li><a href="./detail-genres.html">Trap Latino</a> </li>
+            <ul class="genres-1">
+               
             </ul>
-            <ul class="genres">
-                <li><a href="./detail-genres.html">House</a> </li>
-                <li><a href="./detail-genres.html">Pop</a> </li>
-                <li><a href="./detail-genres.html">Pop-Rock</a> </li>
-                <li><a href="./detail-genres.html">Electro-Pop</a> </li>
-                <li><a href="./detail-genres.html">Funk</a> </li>
+            <ul class="genres-2">
+                
             </ul>
-            <ul class="genres">
-                <li><a href="./detail-genres.html">Musica Clasica</a></li>
-                <li><a href="./detail-genres.html">Jazz</a></li>
-                <li><a href="./detail-genres.html">Soul</a></li>
-                <li><a href="./detail-genres.html">Blues</a></li>
-                <li><a href="./detail-genres.html">Flamenco</a></li>
+            <ul class="genres-3">
+
             </ul>
-            <ul class="genres">
-                <li><a href="./detail-genres.html">Salsa</a></li>
-                <li><a href="./detail-genres.html">Tango</a></li>
-                <li><a href="./detail-genres.html">Punk</a></li>
-                <li><a href="./detail-genres.html">Metal</a></li>
-                <li><a href="./detail-genres.html">Rap</a> </li>
+            <ul class="genres-4">
+
             </ul>
         </article>
     </container>
