Reorganizacion footer y detail-track

--- a/detail-track.html
+++ b/detail-track.html
@@ -12,7 +12,9 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
         <title>Detalle de Canciones</title>
     </head>
-    <body>
+    <!--GIfLoad
+    <div class="gif"><iframe src="https://giphy.com/embed/cnzP4cmBsiOrccg20V" width="200%" height="25%" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
+    <body class="body-track">-->
         <!-- header -->
         <header>
             <div class="logo">
@@ -36,7 +38,6 @@
         <container class="container-track">
             <article class="article-track">
                 `<div class="track-data">
-                    <div class="image-track"></div>
                     <h4 class="cancion"></h4>
                     <h4 class="album"></h4>
                     <h4 class="artista"></h4>
@@ -73,10 +74,7 @@
                 </ul>
             </section>
             <section class="owners">
-                <h4>Owners</h4>
-                <p>
-                    <i class="fas fa-users"></i>
-                </p>
+                <h4>Owners <i class="fas fa-users"></i></h4>
                 <ul>
                     <li>Octavio Soncini</li>
                     <li>Julian Araujo</li>
