--- a/index.html
+++ b/index.html
@@ -87,10 +87,7 @@
             </ul>
         </section>
         <section class="owners">
-            <h4>Owners</h4>
-            <p>
-                <i class="fas fa-users"></i>
-            </p>
+            <h4>Owners <i class="fas fa-users"></i></h4>
             <ul>
                 <li>Octavio Soncini</li>
                 <li>Julian Araujo</li>
