--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         </div>
     </header>
 
+    <!--GIfLoad  -->
+    <div class="gif"><iframe src="https://giphy.com/embed/LpACcI92qjUkkoT2Sh" width="40%" height="40%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
+    
     <!--canciones-->
     <span>
         <h2 class="titulos-index">Canciones</h2>
