jd_detalle_albums

--- a/detail-album.html
+++ b/detail-album.html
@@ -33,8 +33,8 @@
 
     <!--body-->
     <container class="container-album">
-        <section class="section-album">
-            <article class='album-image'></article>
+        <article class='album-image'></article>
+         <!--<section class="section-album">
             <article class="album-data">
                 <h2>Album: Stories</h2>
                 <h3><a href="./detail-artist.html">Artista: Avicii</a></h2>
@@ -59,8 +59,9 @@
                     <li><a href="./detail-track.html">Trouble</a></li>
                     <li><a href="./detail-track.html">Gonna Love Ya</a></li>
                 </ul>
-            </article>
-        </section>
+                <img src="" alt="">
+            </section> -->
+            </article> 
 
         <!--footer-->
         <footer>
