--- a/detail-genres.html
+++ b/detail-genres.html
@@ -33,7 +33,7 @@
 
     <!--body-->
     <section class="detail-genres">
-        <h1>Genero(consultar)</h1>
+        <h1 class="nombreGenero"></h1>
         <article class="detail-genres">
             <ul class="detailGenres">
                 
