--- a/search-results.html
+++ b/search-results.html
@@ -35,8 +35,7 @@
     <container class="resultado-container">
         <h1>Resultados de Búsqueda</h1>
         <article class="article-resultado">
-            <h4>Resultado de Búsqueda:</h4>
-            <h4>SE A ENCONTRADO UN Resultado</h4>
+            <h4 class="busqueda"></h4>
         </article>
         <!--<article class="article-noresultados">
             <h4>Lo sentimos, no se ha encontrado un resultado para tu búsqueda :(</h4>
