CSS Resultado de Busqueda y condicional

--- a/search-results.html
+++ b/search-results.html
@@ -35,14 +35,15 @@
     <container class="resultado-container">
         <h1>Resultados de Búsqueda</h1>
         <article class="article-resultado">
-            <h4 class="busqueda"></h4>
+            <h2 class="busqueda"></h2>
             <ul class="resultado">
                 
             </ul>
         </article>
-        <!--<article class="article-noresultados">
-            <h4>Lo sentimos, no se ha encontrado un resultado para tu búsqueda :(</h4>
-        </article>-->
+        <!--NoResultado-->
+        <article class="article-noresultados">
+        <h4>Lo sentimos, no se ha encontrado un resultado para tu búsqueda :(</h4>
+        </article>
         <article class="recomendado">
             <h4>Recomendados</h4>
             <ul>
