--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
             </nav>
             <form action="./search-results.html" class="barrabusqueda" method="GET">
                 <input type="text" name="search" value="" placeholder="Canciones, artistas, albums...">
+                <i class="alertIcon"></i>
                 <button type="submit">Buscar</button>
+                <p class="alert"></p>
             </form>
         </div>
     </header>
