--- a/search-results.html
+++ b/search-results.html
@@ -45,7 +45,7 @@
         <h4>Lo sentimos, no se ha encontrado un resultado para tu búsqueda :(</h4>
         </article>
         <article class="recomendado">
-            <h4>Recomendados</h4>
+            <!--<h4>Recomendados</h4>
             <ul>
                 <li>
                     <a href="./detail-track.html">Canción: Blinding Lights - The Weekend</a>
@@ -61,7 +61,7 @@
                 <a href="./detail-track.html"><img src="./img/img_canciones/blinding_lights.jpg" alt="canciónblindinglights"></a>
                 <a href="./detail-album.html"><img src="./img/img_albums/avicii-stories_album.jpg" alt="slbumavicii"></a>
                 <a href="./detail-artist.html"><img src="./img/img_artistas/david_guetta.jpg" alt="fotodavidguetta"></a>
-            </div>
+            </div>-->
         </article>
     </container>
     <!--footer-->
