--- a/playlist.html
+++ b/playlist.html
@@ -25,9 +25,11 @@
                     <li><a href="./playlist.html">Playlist</a></li>
                 </ul>
             </nav>
-            <form action="./search-results.html" class="barrabusqueda">
+            <form action="./search-results.html" class="barrabusqueda" method="GET">
                 <input type="text" name="search" value="" placeholder="Canciones, artistas, albums...">
+                <i class="fas fa-exclamation alertIcon"></i>
                 <button type="submit">Buscar</button>
+                <p class="alert"></p>
             </form>
         </div>
     </header>
@@ -36,9 +38,7 @@
         <div>
             <h1 class="h1playlist"><strong>Tu Playlist</strong></h1>
         </div>
-        <table style="width: 90%;" class="table">
-            
-        </table>
+        <table style="width: 90%;" class="table"></table>
     </container>
 
     <!--footer-->
