--- a/detail-artist.html
+++ b/detail-artist.html
@@ -26,9 +26,11 @@
                     <li><a href="./playlist.html">Playlist</a></li>
                 </ul>
             </nav>
-            <form action="./search-results.html" class="barrabusqueda">
-                    <input type="text" name="search" value="" placeholder="Canciones, artistas, albums...">
-                    <button type="submit">Buscar</button>
+            <form action="./search-results.html" class="barrabusqueda" method="GET">
+                <input type="text" name="search" value="" placeholder="Canciones, artistas, albums...">
+                <i class="fas fa-exclamation alertIcon"></i>
+                <button type="submit">Buscar</button>
+                <p class="alert"></p>
             </form>
         </div>
     </header>
