--- a/detail-genres.html
+++ b/detail-genres.html
@@ -24,9 +24,11 @@
                     <li><a href="./playlist.html">Playlist</a></li>
                 </ul>
             </nav>
-            <form action="./search-results.html" class="barrabusqueda">
+            <form action="./search-results.html" class="barrabusqueda" method="GET">
                 <input type="text" name="search" value="" placeholder="Canciones, artistas, albums...">
+                <i class="fas fa-exclamation alertIcon"></i>
                 <button type="submit">Buscar</button>
+                <p class="alert"></p>
             </form>
         </div>
     </header>
