--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@500&family=Zen+Dots&display=swap"
-        rel="stylesheet">
+    rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@500&family=Poppins&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>TurnedUp</title>
 </head>
 <body class="backgroundindex">
@@ -30,7 +30,7 @@
             </nav>
             <form action="./search-results.html" class="barrabusqueda" method="GET">
                 <input type="text" name="search" value="" placeholder="Canciones, artistas, albums...">
-                <i class="alertIcon"></i>
+                <i class="fas fa-exclamation alertIcon"></i>
                 <button type="submit">Buscar</button>
                 <p class="alert"></p>
             </form>
@@ -38,7 +38,7 @@
     </header>
 
     <!--GIfLoad  -->
-    <div class="gif"><iframe src="https://giphy.com/embed/LpACcI92qjUkkoT2Sh" width="40%" height="40%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
+    <div class="gif"><iframe src="https://giphy.com/embed/LpACcI92qjUkkoT2Sh" width="31%" height="31%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
     
     <!--canciones-->
     <span>
