--- a/playlist.html
+++ b/playlist.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Playlist</title>
 </head>
 
@@ -38,11 +38,29 @@
         <div>
             <h1 class="h1playlist"><strong>Tu Playlist</strong></h1>
         </div>
-        <table style="width: 90%;" class="table"></table>
+        <table style="width: 90%;" class="table">
+            <tr>
+                <th class="num">
+                    #
+                </th>
+                <th>
+                    TÍTULO
+                </th>
+                <th class="albumPlaylist">
+                    ALBUM
+                </th>
+                <th class="lyric">
+                    <i class="fas fa-music"></i>
+                </th>
+                <th class="clock">
+                    <i class="far fa-clock"></i>
+                </th>
+            </tr>
+        </table>
     </container>
 
     <!--footer-->
-    <footer>
+    <footer class="fplaylist">
         <section class="contact">
             <h4 class=""><strong>Contact</strong></h4>
             <article class="contentcontact">
