--- a/detail-genres.html
+++ b/detail-genres.html
@@ -31,6 +31,9 @@
                 <p class="alert"></p>
             </form>
         </div>
+        <div id="gifHeader">
+            <div style="width:70%;height:0;padding-bottom:66%;position:relative;"><iframe src="https://giphy.com/embed/9roXsZPSSVT1kRzLM0" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
+        </div>
     </header>
 
     <!--body-->
