--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@500&family=Zen+Dots&display=swap"
-    rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@500&family=Zen+Dots&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@500&family=Poppins&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
@@ -34,6 +33,9 @@
                 <button type="submit">Buscar</button>
                 <p class="alert"></p>
             </form>
+        </div>
+        <div id="gifHeader">
+            <div style="width:70%;height:0;padding-bottom:66%;position:relative;"><iframe src="https://giphy.com/embed/9roXsZPSSVT1kRzLM0" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
         </div>
     </header>
 
