--- a/detail-artist.html
+++ b/detail-artist.html
@@ -38,6 +38,9 @@
         </div>
     </header>
     
+    <!--GIfLoad  -->
+    <div class="gif"><iframe src="https://giphy.com/embed/kUTME7ABmhYg5J3psM" width="27%" height="27%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
+
     <!-- body -->
     <main class="da-main">
         <article class="da-article">
