--- a/detail-genres.html
+++ b/detail-genres.html
@@ -36,6 +36,9 @@
         </div>
     </header>
 
+    <!--GIfLoad  -->
+    <div class="gif"><iframe src="https://giphy.com/embed/kUTME7ABmhYg5J3psM" width="27%" height="27%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
+
     <!--body-->
     <section class="detail-genres">
         <h1 class="nombreGenero"></h1>
