--- a/genres.html
+++ b/genres.html
@@ -35,6 +35,10 @@
             <div style="width:70%;height:0;padding-bottom:66%;position:relative;"><iframe src="https://giphy.com/embed/9roXsZPSSVT1kRzLM0" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
         </div>
     </header>
+
+    <!--GIfLoad  -->
+    <div class="gif"><iframe src="https://giphy.com/embed/kUTME7ABmhYg5J3psM" width="27%" height="27%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
+
     <!--body-->
     <container class="genres">
         <article class="genres">
