--- a/playlist.html
+++ b/playlist.html
@@ -36,6 +36,10 @@
             <div style="width:70%;height:0;padding-bottom:66%;position:relative;"><iframe src="https://giphy.com/embed/9roXsZPSSVT1kRzLM0" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
         </div>
     </header>
+
+    <!--GIfLoad  -->
+    <div class="gif"><iframe src="https://giphy.com/embed/kUTME7ABmhYg5J3psM" width="27%" height="27%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
+
     <!--PlaylistGrid-->
     <container class="container-table">
         <div>
